--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="main-container">
         <nav>
-            <img src="../assets/images/background.png" class="background-img">
-            <img src="../assets/images/logo.png" class="logo-img">
+            <img src="./assets/images/background.png" class="background-img">
+            <img src="./assets/images/logo.png" class="logo-img">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -32,7 +32,7 @@
         </div>
         <span>
             Download The App
-            <img src="../assets/images/down-arrow.png" class="down">
+            <img src="./assets/images/down-arrow.png" class="down">
         </span>
     </div>
 </body>
